Added execution abortion and removal of finished executions

--- a/client/app/css/main.css
+++ b/client/app/css/main.css
@@ -244,6 +244,10 @@ treecontrol ul {
     white-space: nowrap;
 }
 
+.info-view.aborted {
+    color: #eb4747;
+}
+
 td.comment {
     max-width: 480px;
     text-overflow: ellipsis;
