--- a/client/app/templates/code-tab.html
+++ b/client/app/templates/code-tab.html
@@ -3,5 +3,11 @@
     <div class="btn btn-default" data-ng-disabled="!data.id" data-ng-click="saveScript()">Save</div>
     <div class="btn btn-default" data-ng-click="saveScriptAs()">Save As</div>
     <div class="btn btn-default" data-ng-disabled="!data.id" data-ng-click="deleteScript()">Delete</div>
+    <span class="space-between">Hash:</span>
+    <select ng-if="hashes" class="form-control input value" ng-options="hash for hash in hashes" ng-model="currentHash" ng-change="changeHash(currentHash)">
+    </div>
+    </select>
+    <div class="btn read-only" ng-show="currentHash && currentHash != hashes[0]" disabled="disabled">Read Only</div>
 </div>
-<div class="code-editor" ui-ace="aceOption" ng-model="code"></div>
+<div class="code-editor" style="opacity: 0.8;" ui-ace="oldCodeAceOption" ng-model="oldCode" ng-show="currentHash && currentHash != hashes[0]"></div>
+<div class="code-editor" ui-ace="aceOption" ng-model="code" ng-hide="currentHash && currentHash != hashes[0]"></div>
