Added overflow auto in execute immediate results

--- a/client/app/css/main.css
+++ b/client/app/css/main.css
@@ -361,6 +361,7 @@ td.output-view > table > tbody > tr > th {
     width: 100%;
     height: calc(100% - 34px);
     padding: 10px;
+    overflow: auto;
 }
 
 .pipeline-container > .nodes,
