--- a/client/app/templates/pipeline-tab.html
+++ b/client/app/templates/pipeline-tab.html
@@ -11,6 +11,7 @@
         <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
             <li role="menuitem" data-ng-click="addNode('Open Model')"><a>Open Model</a></li>
             <li role="menuitem" data-ng-click="addNode('Close Model')"><a>Close Model</a></li>
+            <li role="menuitem" data-ng-click="addNode('Save Model')"><a>Save Model</a></li>
             <li role="menuitem" data-ng-click="addNode('Run Simulation')"><a>Run Simulation</a></li>
             <li role="menuitem" data-ng-click="addInputs()"><a>Add Input</a></li>
             <li role="menuitem" data-ng-click="addOutputs()"><a>Add Output</a></li>
