--- a/client/app/templates/tab-set.html
+++ b/client/app/templates/tab-set.html
@@ -3,6 +3,7 @@
         <div class="pipelinenode-options">
             <ul>
                 <li ng-click="newTab('code')">New Script</li>
+                <li ng-click="newTab('model')">New Model</li>
                 <li ng-click="newTab('pipeline')">New Pipeline</li>
                 <li ng-click="newTab('intcode')">New Interface</li>
             </ul>
