--- a/client/app/templates/model-tab.html
+++ b/client/app/templates/model-tab.html
@@ -40,7 +40,7 @@
                 <!-- <td uib-tooltip="{{fullDate(metaData.startTime)}}" tooltip-append-to-body="true">{{relativeDate(metaData.startTime)}}</td> -->
                 <td uib-tooltip="{{fullDate(metaData.finishTime)}}" tooltip-append-to-body="true">{{relativeDate(metaData.finishTime)}}</td>
                 <td>{{metaData.type || '-'}}</td>
-                <td>{{metaData.task || '-'}}</td>
+                <td uib-tooltip="{{metaData.hash}}" tooltip-append-to-body="true">{{metaData.task || '-'}}</td>
                 <td>{{metaData.comment || '-'}}</td>
             </tr>
           </tbody>
