Added 'blocked by' in pipeline tab

--- a/client/app/templates/pipeline-tab.html
+++ b/client/app/templates/pipeline-tab.html
@@ -24,6 +24,7 @@
     <select ng-if="hashes" class="form-control input value" ng-options="hash for hash in hashes" ng-model="$parent.currentHash" ng-change="changeHash()">
     </select>
     <div class="btn read-only" ng-show="permission=='read_only' || currentHash && currentHash != hashes[0]" disabled="disabled">Read Only</div>
+    <span class="space-between" ng-if="permission=='read_only' && currentHash && currentHash == hashes[0]">Blocked by {{get_users_with_write()[0]}}</span>
     <div class="btn read-write" ng-show="permission=='read_write'" disabled="disabled">Read Write</div>
 <!--     <script type="text/ng-template" id="nodeOptions.html">
         <div class="pipelinenode-options">
