Working on new frontend for interfaces

--- a/client/app/templates/tab-set.html
+++ b/client/app/templates/tab-set.html
@@ -5,7 +5,7 @@
                 <li ng-click="newTab('code')">New Script</li>
                 <li ng-click="newTab('model')">New Model</li>
                 <li ng-click="newTab('pipeline')">New Pipeline</li>
-                <li ng-click="newTab('intcode')">New Interface</li>
+                <li ng-click="newTab('interface')">New Interface</li>
             </ul>
         </div>
     </script>
