Fixing interface errors

--- a/client/app/templates/interface-tab.html
+++ b/client/app/templates/interface-tab.html
@@ -1,8 +1,8 @@
 <div class="view-panel code-panel">
     <!-- TODO REFACTOR EXTRACT-->
-    <div class="btn btn-default" data-ng-disabled="!data.id" data-ng-click="saveScript()">Save</div>
-    <div class="btn btn-default" data-ng-click="saveScriptAs()">Save As</div>
-    <div class="btn btn-default" data-ng-disabled="!data.id" data-ng-click="deleteScript()">Delete</div>
+    <div class="btn btn-default" data-ng-disabled="!data.id" data-ng-click="saveInterface()">Save</div>
+    <div class="btn btn-default" data-ng-click="saveInterfaceAs()">Save As</div>
+    <div class="btn btn-default" data-ng-disabled="!data.id" data-ng-click="deleteInterface()">Delete</div>
     <div class="btn-group">
         <label class="btn btn-default" ng-model="visibleEditor" uib-btn-radio="0">HTML</label>
         <label class="btn btn-default" ng-model="visibleEditor" uib-btn-radio="1">JS</label>
