Defining iframe for interface

--- a/client/app/templates/interface-tab.html
+++ b/client/app/templates/interface-tab.html
@@ -21,5 +21,5 @@
 <div class="code-editor" ui-ace="aceOptions[1]" ng-model="code[1]" ng-hide="(currentHash && currentHash != hashes[0]) || visibleEditor != 1"></div>
 <div class="code-editor" ui-ace="aceOptions[2]" ng-model="code[2]" ng-hide="(currentHash && currentHash != hashes[0]) || visibleEditor != 2"></div>
 <div ng-if="visibleEditor == 3">
-    <iframe src="" frameborder="0"></iframe>
+    <iframe src="interface-frame.html" frameborder="0"></iframe>
 </div>
