--- a/client/app/css/main.css
+++ b/client/app/css/main.css
@@ -341,6 +341,15 @@ td.output-view > table > tbody > tr > th {
     /*margin-left: 50px;*/
 }
 
+.interface-frame,
+.interface-frame > iframe {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
 .firepad {
     position: relative;
     width: 100%;
